--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,10 @@
     "version": 2,
     "rewrites": [
         {
+            "source": "/api/chat",
+            "destination": "/api/chat.js"
+        },
+        {
             "source": "/engine",
             "destination": "/viewer.html"
         },
